--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -1,11 +1,11 @@
 
-Want to use greenbride in two minutes? Fill in the form below and hit _Generate Commands_. 
-You will be presented with *seven commands* that you can paste in your command line.
+Want to use greenbride in two minutes? Fill in the form below and hit _Generate Commands_. <br>
+You will be presented with *seven commands* that you can paste in your command line.<br>
 
 
-<wiki:gadget url="http://greenbridge.googlecode.com/svn/trunk/igadget.xml"  width="640" height="600"  />
+<wiki:gadget url="http://greenbridge.googlecode.com/svn/trunk/igadget.xml"  width="640" height="400"  />
 
 Once the commands run, have a look around the two generated maven projects. 
-* Open stories.html in the first mvn project with your web browser. This is the story wiki.   
-* Open AppTest.java in the second mvn project. This is an example of annotating your junit tests.
+ * Open stories.html in the first mvn project with your web browser. This is the story wiki.   
+ * Open AppTest.java in the second mvn project. This is an example of annotating your junit tests.
  
