--- a/wiki/WhyGreenbridge.wiki
+++ b/wiki/WhyGreenbridge.wiki
@@ -10,6 +10,8 @@ Many bdd tools have complicated ways of writing stories, scenarios and specs. Th
 ==  IDE Support ==
 Again, since every modern browser has JUnit support baked in, running Greenbridge tests is as easy as lauching JUnit tests. But that's not all. It was important to us at the code level to be able to know what the scenario was, and navigate back to the original scenario. With modern IDE code completion, when you code complete an annotation such as @Scenario(MarkedRemovedAccountForReview_2.class) you will see the scenario text, and a link to see the original wiki page.   
 http://2.bp.blogspot.com/_onmnwr9mXpo/S7QGQaT2PhI/AAAAAAAAA2g/j0M-0U5dZxA/s1600/unittest-cropped.jpg
+(The annotation is in a strange stop in the example above so as to show the code completion without hiding the code itself)
+
 
 == BA(s) Break the Build ==
 We have new CI servers. They integrate our code changes. They tell us when someone has submitted a regression to the code. What happens when the requirements themselves change? That by itself should break the build. We wanted a way to signal this. For example lets say you had a test annotated with @Scenario(MarkedRemovedAccountForReview_2.class)
