--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -1,11 +1,14 @@
-
 Want to use greenbride in two minutes? Fill in the form below and hit _Generate Commands_. <br>
 You will be presented with *seven commands* that you can paste in your command line.<br>
+(Maven is required, as the commands are a maven archetype)
 
 
 <wiki:gadget url="http://greenbridge.googlecode.com/svn/trunk/igadget.xml"  width="640" height="400"  />
 
 Once the commands run, have a look around the two generated maven projects. 
- * Open stories.html in the first mvn project with your web browser. This is the story wiki.   
- * Open AppTest.java in the second mvn project. This is an example of annotating your junit tests.
+ * Open stories.html in the first mvn project with your web browser. This is an example story wiki. You can add new stories or modify the ones in there. If you want to switch to another source for stories, see as an example, see the [JiraPlugin]   
+ * Look around the tests in the second mvn project. This is an example of annotating your junit tests.
+
+
+Practice adding and changing stories, and creating and updating unit tests. See the WhyTwoMavenProjects page on why the structure is setup this way.
  
